# EM-Engine

./: .gitignore  README.md
res/shaders/: frag.glsl  vert.glsl
res/shaders/lamp/: lamp_FS.glsl  lamp_VS.glsl
res/shaders/lighting_maps/: lighting_maps_FS.glsl  lighting_maps_VS.glsl
res/shaders/multiple_lights/: multiple_lights_FS.glsl
res/sprites/: floor.ems  player.ems  square.ems  test.xcf  test1.xcf  test2.xcf  test3.xcf  test4.xcf  test5.xcf  wall.ems
src/: CMakeLists.txt  Camera.cpp  Camera.h  Collider.h  Collider.hpp  Cube.h  Entity.cpp  Entity.h  IndexBuffer.cpp  Player.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SpriteData.h  SpriteLoader.h  Terrain.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBufferLayout.h  main.cpp  ryangl.h
test/: base.cpp  fragment.shader  vertex.shader
